# django-base

./: .gitignore  README.md  pyproject.toml
app/: settings.py  urls.py
core/: models.py  serializers.py
core/migrations/: 0001_initial.py
integration/: docker-compose.yml
