[project]
name = "djauth"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "django>=5.1.2",
    "djangorestframework>=3.15.2",
    "drf-nested-routers>=0.94.1",
    "loguru>=0.7.2",
]

[tool.uv]
dev-dependencies = [
    "behave>=1.2.6",
    "blue>=0.9.1",
    "django-debug-toolbar>=4.4.6",
    "freezegun>=1.5.1",
    "mypy>=1.12.0",
    "pytest-cov>=5.0.0",
    "pytest-django>=4.9.0",
]
